<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_signup_nav_graph"
    app:startDestination="@id/mainLoginSignupFragment">

    <fragment
        android:id="@+id/mainLoginSignupFragment"
        android:name="com.cmput301f21t26.habittracker.ui.auth.MainLoginSignupFragment"
        android:label="fragment_main_login_signup"
        tools:layout="@layout/fragment_main_login_signup" >
        <action
            android:id="@+id/action_mainLoginSignupFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
        <action
            android:id="@+id/action_mainLoginSignupFragment_to_signupFragment"
...
