...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoGreenBlue"
        app:srcCompat="@drawable/ic_habittracker_font_logo_blue" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/rubik_bold"
        android:text="LOGIN"
        app:cornerRadius="50dp"
...
